--- a/_includes/schools.html
+++ b/_includes/schools.html
@@ -1,5 +1,5 @@
 Team -->
-<section class="page-section" id="{{ site.data.sitetext[site.locale].team.section | default: "team" }}">
+<section class="page-section" id="{{ site.data.sitetext[site.locale].schools.section | default: "schools" }}">
 <div class="container">
   <div class="row">
 	<div class="col-lg-12 text-center">
@@ -13,7 +13,7 @@ Team -->
 	  <div class="school-loc">
 		<img class="mx-auto rounded-circle" src="{{ school.image }}" alt="">
 <!-- 		<h4>{{ school.name }}</h4> -->
-		<p class="text-muted">{{ school.name }}</p>
+		<p class="text-muted">{{ schools.name }}</p>
 <!-- 		<ul class="list-inline social-buttons">
 		{% for network in person.social %}
 		  <li class="list-inline-item">
