--- a/_includes/schools.html
+++ b/_includes/schools.html
@@ -13,16 +13,7 @@ Team -->
 	  <div class="school-loc">
 		<img class="mx-auto rounded-circle" src="{{ school.image }}" alt="">
 <!-- 		<h4>{{ school.name }}</h4> -->
-		<p class="text-muted">{{ schools.name }}</p>
-<!-- 		<ul class="list-inline social-buttons">
-		{% for network in person.social %}
-		  <li class="list-inline-item">
-			<a href="{{ network.url }}">
-			  <i class="{{ network.icon }}"></i>
-			</a>
-		  </li>
-		{% endfor %}
-		</ul> -->
+		<p class="text-muted">{{ school.name }}</p>
 	  </div>
 	</div>
   {% endfor %}
