--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,7 @@ layout: default
 {% include portfolio_grid.html %}
 {% include about.html %}
 {% include timeline.html %}
+{% include schools.html %}
 {% include team.html %}
 {% include clients.html %}
 {% include contact.html %}
