--- a/_includes/schools.html
+++ b/_includes/schools.html
@@ -1,4 +1,4 @@
-Team -->
+<!-- Schools-->
 <section class="page-section" id="{{ site.data.sitetext[site.locale].schools.section | default: "schools" }}">
 <div class="container">
   <div class="row">
