--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -27,6 +27,7 @@ $contact-image: "{{ site.data.style.contact-image }}";
 @import "layout/services.scss";
 @import "layout/portfolio.scss";
 @import "layout/timeline.scss";
+@import "layout/schools.scss";
 @import "layout/team.scss";
 @import "layout/contact.scss";
 @import "layout/footer.scss";
