--- a/_includes/schools.html
+++ b/_includes/schools.html
@@ -18,11 +18,11 @@
 	</div>
   {% endfor %}
   </div>
-<!--   <div class="row">
+  <div class="row">
 	<div class="col-lg-8 mx-auto text-center">
-	  <div class="large text-muted">{{ site.data.sitetext[site.locale].team.subtext | markdownify }}</div>
+	  <div class="large text-muted">{{ site.data.sitetext[site.locale].schools.subtext | markdownify }}</div>
 	</div>
-  </div> -->
+  </div>
 </div>
 </section>
 <!-- End Schools-->
